<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">iBrary</string>
    <string name="title_activity_home">Home</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="message_tab">Messages</string>
    <string name="profile_tab">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="intro">Fulfill your need to read</string>
    <string name="username">Username:</string>
    <string name="phone_num">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="location">Location:</string>
    <string name="set_location">Click here to set Location</string>
    <string name="friend_list">Friends List</string>
    <string name="borrow_requests">Borrowed/Requested Books</string>
    <string name="library">My Library</string>
    <string name="edit_user_pic">Edit User Photo</string>
    <string name="hello_blank_fragment">this is placeholder text</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_edit__profile_">Edit_Profile_Activity</string>
    <string name="save">Save</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="my_fav_book">My Fav Book</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="owner">Owner</string>
    <string name="status">Status</string>
    <string name="go_to_forum">Go To Forum</string>
    <string name="description">Description</string>
    <string name="request_book">Request This Book</string>
    <string name="cancel_request">Cancel Book Request</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_barcode__scanner_">Barcode_Scanner_Activity</string>
    <string name="Pick_pic">Pick</string>
    <string name="barcode_name">barcode</string>
    <string name="barcodeReader">BarcodeReader</string>
    <string name="ok">OK</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="grant">GRANT</string>
    <string name="cancel">CANCEL</string>
    <string name="take_scan">Scan ISBN</string>
    <string name="borrowed">Borrowed</string>
    <string name="requested">Requested</string>
    <string name="my_friends">My Friends</string>
    <string name="title_activity_view__rating__post_">View_Rating_Post_Activity</string>
    <string name="gave">and rated it ...</string>
    <string name="title_activity_view__text__post_">View_Text_Post_Activity</string>
    <string name="title_activity_search_">Search_Activity</string>
    <string name="search">Search</string>
    <string name="search_by">Search By</string>
    <string-array name="filter_search_options">
        <item>Author</item>
        <item>Title</item>
        <item>ISBN</item>
        <item>Friends</item>
    </string-array>
    <string name="dismiss">Dismiss</string>
    <string name="clear_all">Clear all</string>
    <string name="add_description">Add Book Description (optional)</string>
    <string name="new_book">New Book</string>
    <string name="open_scanner">Open Scanner</string>
    <string name="add_book">Add Book To Library</string>
    <string name="filter_by">Filter By</string>
    <string name="edit">Edit</string>
    <string name="edit_book">Edit Book</string>
    <string name="edit_description">Edit Book Description</string>
    <string name="remove">Remove from Library</string>
    <string name="welcome">Welcome to iBrary</string>
    <string name="requests">requests this book</string>
    <string-array name="filter_my_library">
        <item>Available</item>
        <item>Requested</item>
        <item>Accepted</item>
        <item>Borrowed</item>
    </string-array>
    <string name="title_activity_view__all__requests_">View_All_Requests_Activity</string>
    <string name="view_all_request">All Book Requests</string>
    <string name="my_requests">All Requests on My Books</string>
    <string name="view_all_users">View All Users</string>
    <string name="view_all_books">View All Books</string>
    <string name="requests2">requests</string>

<string name="app_name">iBrary</string>
<string name="title_activity_home">Home</string>
<string name="home_tab">Home</string>
<string name="search_tab">Search</string>
<string name="message_tab">Messages</string>
<string name="profile_tab">Profile</string>
<string name="action_settings">Settings</string>
<string name="section_format">Hello World from section: %1$d</string>
<string name="title_activity_login">Login</string>
<string name="title_activity_register">Register</string>
<string name="sign_up">Sign Up</string>
<string name="intro">Fulfill your need to read</string>
<string name="username">Username:</string>
<string name="phone_num">Phone Number:</string>
<string name="email">Email:</string>
<string name="location">Location:</string>
   <string name="set_location">Click here to set Location</string>
<string name="friend_list">Friends List</string>
<string name="borrow_requests">Borrowed/Requested Books</string>
<string name="library">My Library</string>
<string name="edit_user_pic">Edit User Photo</string>
<string name="hello_blank_fragment">this is placeholder text</string>
<string name="edit_profile">Edit Profile</string>
<string name="logout">Logout</string>
<string name="title_activity_edit__profile_">Edit_Profile_Activity</string>
<string name="save">Save</string>
<string name="old_pass">Old Password</string>
<string name="new_pass">New Password</string>
<string name="confirm_pass">Confirm Password</string>
<string name="my_fav_book">My Fav Book</string>
<string name="book_title">Book Title</string>
<string name="author">Author</string>
<string name="isbn">ISBN</string>
<string name="owner">Owner</string>
<string name="status">Status</string>
<string name="go_to_forum">Go To Forum</string>
<string name="description">Description</string>
<string name="request_book">Request This Book</string>
<string name="cancel_request">Cancel Book Request</string>
<string name="password">Password</string>
<string name="confirm_password">Confirm Password</string>
<string name="create_account">Create Account</string>
<string name="title_activity_barcode__scanner_">Barcode_Scanner_Activity</string>
<string name="Pick_pic">Pick</string>
<string name="barcode_name">barcode</string>
<string name="barcodeReader">BarcodeReader</string>
<string name="ok">OK</string>
<string name="grant_permission">Grant Permission</string>
<string name="permission_camera">This app needs camera permission to scan barcode</string>
<string name="permission_camera_rationale">Access to the camera is needed for detection</string>
<string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
<string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
<string name="title_activity_main">Barcode Reader Sample</string>
<string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
<string name="read_barcode">Read Barcode</string>
<string name="auto_focus">Auto Focus</string>
<string name="use_flash">Use Flash</string>
<string name="barcode_success">Barcode read successfully</string>
<string name="barcode_failure">No barcode captured</string>
<string name="barcode_error">"Error reading barcode: %1$s"</string>
<string name="grant">GRANT</string>
<string name="cancel">CANCEL</string>
<string name="take_scan">Scan ISBN</string>
<string name="borrowed">Borrowed</string>
<string name="requested">Requested</string>
<string name="my_friends">My Friends</string>
<string name="title_activity_view__rating__post_">View_Rating_Post_Activity</string>
<string name="gave">and rated it ...</string>
<string name="title_activity_view__text__post_">View_Text_Post_Activity</string>
<string name="title_activity_search_">Search_Activity</string>
<string name="search">Search</string>
<string name="search_by">Search By</string>
<string-array name="filter_search_options">
<item>Author</item>
<item>Title</item>
<item>ISBN</item>
<item>Friends</item>
</string-array>
<string name="dismiss">Dismiss</string>
<string name="clear_all">Clear all</string>
<string name="add_description">Add Book Description (optional)</string>
<string name="new_book">New Book</string>
<string name="open_scanner">Open Scanner</string>
<string name="add_book">Add Book To Library</string>
<string name="filter_by">Filter By</string>
<string name="edit">Edit</string>
<string name="edit_book">Edit Book</string>
<string name="edit_description">Edit Book Description</string>
<string name="remove">Remove from Library</string>
<string name="welcome">Welcome to iBrary</string>
<string name="requests">requests this book</string>
<string-array name="filter_my_library">
<item>Available</item>
<item>Requested</item>
<item>Accepted</item>
<item>Borrowed</item>
</string-array>
<string name="title_activity_view__all__requests_">View_All_Requests_Activity</string>
<string name="view_all_request">All Book Requests</string>
<string name="my_requests">All Requests on My Books</string>
   <string name="view_all_users">View All Users</string>
   <string name="view_all_books">View All Books</string>



</resources>