<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Book_Details_Activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/BookCover"
                        android:layout_width="150dp"
                        android:layout_weight="1"
                        android:layout_span="2"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/ic_book_black_24dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/openCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"

                        android:layout_gravity="center_vertical"
                        android:clickable="true"
                        app:backgroundTint="@color/design_default_color_primary"

                        app:srcCompat="@drawable/ic_add_a_photo_white_24dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/removePic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:clickable="true"
                        app:backgroundTint="@color/danger"
                        app:srcCompat="@drawable/garbage" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">




                </TableRow>


                <TableRow

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorBackgroundFloating"
                        android:text="@string/book_title"
                        android:textColor="#000"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/editTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />


                </TableRow>

                <TableRow
                    android:id="@+id/row2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"

                        android:text="@string/author"
                        android:textColor="#000"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/editAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </TableRow>


                <TableRow
                    android:id="@+id/row3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ISBN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"

                        android:text="@string/isbn"
                        android:textColor="#000"
                        android:textSize="12dp" />

                    <EditText
                        android:id="@+id/editISBN"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPersonName" />

                </TableRow>

                <TableRow
                    android:id="@+id/row4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"

                        android:text="@string/take_scan"
                        android:textColor="#000"
                        android:layout_marginRight="12dp"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/openScanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/open_scanner" />
                </TableRow>

            </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">




                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/danger"
                        android:text="@string/remove"
                        android:textColor="@android:color/background_light" />

                    <Button
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save" />


                </TableRow>
                </TableLayout>



        </LinearLayout>


    </ScrollView>





</android.support.constraint.ConstraintLayout>